# TransEgo

./: .gitignore  params_search.txt
Agent_Guide/: IMPLEMENTATION_STATUS.md  Master Guide.md  Research Writing Agent.md  agents_coding.md  code_index_and_topic_matrix.md  workflow_Revise.md  workflow_implement.md
Ego_v2/planner/traj_opt/src/: poly_traj_optimizer.cpp
agents/: coding_agents.yaml  research_agents.yaml  writing_agent.yaml
logs/agent_dev_logs/: phase5_dev_round1.md  step9_ablation_template.csv  step9_experiment_plan.md
logs/rosbags/: README.md
papers/: Academic_Paper.md  Dummy_Paper_1.md  Dummy_Paper_2.md  Dummy_Paper_3.md  Dummy_Paper_4.md  Dummy_Paper_5.md  Summary.md
research/: 3D多目标跟踪(MOT).md  CasADi与Ipopt在MPC中的应用.md  MINCO轨迹参数化方法.md  PX4飞控接口与底层控制.md  ROS2与Gazebo仿真环境.md  SLAM与多传感器融合.md  Summary.md  TensorRT模型部署与加速.md  Transformer在轨迹预测中的应用.md  repo.md  动态环境下的航迹重规划.md  卡尔曼滤波在无人机中的应用.md  基于优化的轨迹生成.md  基于深度学习的端到端轨迹预测.md  基于点云的动态目标检测.md  基于采样的轨迹规划(A*, RRT*).md  多智能体RL避障.md  无人机编队控制.md  无人机避障的势场法与扩展.md  时间最优轨迹规划.md  激光雷达数据预处理与去畸变.md  非线性模型预测控制(NMPC).md
src/Agent_Guide/: Research Writing Agent.md  agents_reasearch.md  workflow.md
src/Ego_v2/planner/plan_manage/: CMakeLists.txt  package.xml
src/Ego_v2/planner/plan_manage/config/: traj_server_params.yaml
src/Ego_v2/planner/plan_manage/launch/: lidar_run.launch  mapping_vis.launch
src/Ego_v2/planner/plan_manage/launch/include/: advanced_param.xml  advanced_param_exp.xml  run_in_sim.xml
src/Ego_v2/planner/plan_manage/src/: traj_server.cpp
src/Ego_v2/planner/traj_opt/include/optimizer/: poly_traj_optimizer.h
src/Ego_v2/planner/traj_opt/src/: poly_traj_optimizer.cpp
src/markdown/: MOT_Perception_Technical_Report.md  MPC_Technical_Report.md  Paper_Draft.md  TODO.md  Traj_Prediction_Technical_Report.md  TransEgo_Full_Stack_Technical_Report.md  TransEgo_Patent_Detailed.md  综合调研报告.md
src/mot_perception/: CMakeLists.txt  package.xml
src/mot_perception/config/: mot_params.yaml
src/mot_perception/include/: bounding_box.h  hungarian_algorithm.h  kalman_filter.h  mot_node_core.h
src/mot_perception/launch/: mot.launch  mot_perception.launch
src/mot_perception/src/: bounding_box.cpp  hungarian_algorithm.cpp  kalman_filter.cpp  mot_node.cpp  mot_node_core.cpp
src/mpc_controller/: CMakeLists.txt  package.xml
src/mpc_controller/config/: mpc_params.yaml  mpc_params_advanced.yaml
src/mpc_controller/include/: quadrotor_nmpc.h  quadrotor_nmpc_advanced.h
src/mpc_controller/launch/: mpc_advanced.launch  mpc_controller.launch  transego_stack_minimal.launch
src/mpc_controller/src/: mpc_node.cpp  mpc_node_advanced_main.cpp  quadrotor_nmpc.cpp  quadrotor_nmpc_advanced.cpp
src/traj_prediction/: CMakeLists.txt  package.xml
src/traj_prediction/config/: predictor_params.yaml
src/traj_prediction/launch/: traj_prediction.launch  trt_predictor.launch
src/traj_prediction/scripts/: evaluate_transformer.py  train_transformer.py  transformer_dataset.py  transformer_model.py  transformer_predict.py
src/traj_prediction/src/: trt_predictor_node.cpp
src/trans_ego_integration/: CMakeLists.txt  package.xml
src/trans_ego_integration/launch/: qa_record.launch  trans_ego_full_stack.launch
src/trans_ego_integration/scripts/: ablation_metrics.py  topic_rate_watchdog.py
