<?xml version="1.0"?>
<package format="2">
  <name>mpc_controller</name>
  <version>0.1.0</version>
  <description>NMPC-like controller interface for PX4 offboard tracking.</description>
  <maintainer email="dev@transego.local">TransEgo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
</package>
