<?xml version="1.0"?>
<package format="2">
  <name>mpc_controller</name>
  <version>0.0.0</version>
  <description>The mpc_controller</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
</package>
