<?xml version="1.0"?>
<package format="2">
  <name>traj_prediction</name>
  <version>0.0.0</version>
  <description>The traj_prediction</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
</package>
