<?xml version="1.0"?>
<package format="2">
  <name>trans_ego_integration</name>
  <version>0.1.0</version>
  <description>System integration, QA, and experiment orchestration for TransEgo.</description>
  <maintainer email="dev@transego.local">TransEgo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mot_perception</exec_depend>
  <exec_depend>traj_prediction</exec_depend>
  <exec_depend>mpc_controller</exec_depend>
</package>
